# EfficientDataStructures

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.c
.github/workflows/: cmake.yml
include/: generic_dll.h  generic_fifo.h  generic_ll.h  generic_vector.h
src/: dll.h  fifo.h  ll.h  set.h  vector.h
tests/: CMakeLists.txt  test1.c
tests/fifo/: CMakeLists.txt  memory_testing.c
tests/ll/: CMakeLists.txt  memory_testing.c  test1.c
tests/vector/: CMakeLists.txt  memory_testing.c
